--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-cli": "^2.0.1",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
